--- a/frontend/src/components/Layout/Layout.module.css
+++ b/frontend/src/components/Layout/Layout.module.css
@@ -1,7 +1,7 @@
 .wrap {
   background-color: #0000007a;
   padding: 0 36px;
-  width: 100vh;
+  width: 100%;
   height: 100vh;
   display: flex;
   align-items: center;
